_k8s/minikube/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hb-ingress
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: hb-user
                port:
                  number: 80
          - path: /api/v1/hotel
            pathType: Prefix
            backend:
              service:
                name: hb-hotel
                port:
                  number: 80
          - path: /api/v1/search
            pathType: Prefix
            backend:
              service:
                name: hb-search
                port:
                  number: 80
          - path: /api/v1/booking
            pathType: Prefix
            backend:
              service:
                name: hb-booking
                port:
                  number: 80
          - path: /api/v1/booking-management
            pathType: Prefix
            backend:
              service:
                name: hb-booking-mgmt
                port:
                  number: 80
